sfdx-source/force-app/main/default/objects/Eligible_Package_To_Wo_Type_Mapping__mdt/Eligible_Package_To_Wo_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-19661: This metadata is created to hold the Product code and Package Name against the each Work order type, which is used to trigger Work order type and Package name mismatch validation in an ANSO flow.</description>
    <label>EligiblePackageToWoTypeMapping</label>
    <pluralLabel>EligiblePackageToWoTypeMappings</pluralLabel>
</CustomObject>