sfdx-source/force-app/main/default/objects/Eligible_Package_To_Wo_Type_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-19661: To indicate if the record is active or not.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>