sfdx-source/force-app/main/default/objects/Eligible_Package_To_Wo_Type_Mapping__mdt/fields/Pacakge_Name__c.field-meta.xml
<CustomField>
    <fullName>Pacakge_Name__c</fullName>
    <description>LEM-19661: To hold the Package Name.</description>
    <label>Pacakge Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>