sfdx-source/force-app/main/default/objects/Eligible_Package_To_Wo_Type_Mapping__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>LEM-19661: To hold the Product Code.</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>