sfdx-source/force-app/main/default/objects/Eligible_Package_To_Wo_Type_Mapping__mdt/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <description>LEM-19661: To hold the Work order type.</description>
    <label>Work Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>